update amazon and gspread

--- a/get_sales.ipynb
+++ b/get_sales.ipynb
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -818,7 +818,7 @@
     "        date_select_selector = '//*[@id=\"ac-daterange-container-report-timeInterval\"]/div'\n",
     "\n",
     "        this_month_select = '//*[@id=\"a-autoid-2-announce\"]'\n",
-    "        this_month = '//*[@id=\"ac-daterange-preset-report-timeInterval_2\"]'\n",
+    "        this_month = '//*[@id=\"ac-daterange-preset-report-timeInterval_2\"]/span'\n",
     "        aply_buttom = '//*[@id=\"ac-daterange-ok-button-report-timeInterval-announce\"]'\n",
     "\n",
     "        date_box = driver.find_element_by_xpath(date_select_selector)\n",
@@ -840,13 +840,13 @@
     "            pass\n",
     "        \n",
     "        sleep(3)\n",
-    "        # this_month_elem_2 = WebDriverWait(driver, 20).until(\n",
-    "        #     EC.presence_of_element_located((By.XPATH, this_month))\n",
-    "        # )\n",
-    "        # try:\n",
-    "        #     this_month_elem_2.click()\n",
-    "        # except:\n",
-    "        #     pass\n",
+    "        this_month_elem_2 = WebDriverWait(driver, 20).until(\n",
+    "            EC.presence_of_element_located((By.XPATH, this_month))\n",
+    "        )\n",
+    "        try:\n",
+    "            this_month_elem_2.click()\n",
+    "        except:\n",
+    "            pass\n",
     "        \n",
     "        sleep(3)\n",
     "        aply_elem = WebDriverWait(driver, 20).until(\n",
@@ -1330,33 +1330,35 @@
     "        my_asp.login()\n",
     "        my_asp.get_data()\n",
     "        table_df = my_asp.prettify_data()\n",
-    "    gs.return_data(df_dict[asp_name], table_df)\n",
+    "    # gs.return_data(df_dict[asp_name], table_df)\n",
     "    \n",
     "    return table_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/52/30wt5wmx0nbcqwkbskglbmxm0000gn/T/ipykernel_47639/2205797.py:26: DeprecationWarning: find_element_by_xpath is deprecated. Please use find_element(by=By.XPATH, value=xpath) instead\n",
-      "  login_button = driver.find_element_by_xpath('//*[@id=\"loginInner\"]/p[1]/input')\n"
+      "/var/folders/52/30wt5wmx0nbcqwkbskglbmxm0000gn/T/ipykernel_47639/1068895304.py:23: DeprecationWarning: find_element_by_xpath is deprecated. Please use find_element(by=By.XPATH, value=xpath) instead\n",
+      "  login_button = driver.find_element_by_xpath('//*[@id=\"signInSubmit\"]')\n",
+      "/var/folders/52/30wt5wmx0nbcqwkbskglbmxm0000gn/T/ipykernel_47639/1068895304.py:48: DeprecationWarning: find_element_by_xpath is deprecated. Please use find_element(by=By.XPATH, value=xpath) instead\n",
+      "  date_box = driver.find_element_by_xpath(date_select_selector)\n"
      ]
     }
    ],
    "source": [
-    "df_rakuten = get_daliy_sales('楽天')\n",
-    "ws, df_gs = gs.get_data_gsh('data_rakuten')"
+    "df_rakuten = get_daliy_sales('アマゾン')\n",
+    "# ws, df_gs = gs.get_data_gsh('data_rakuten')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1381,301 +1383,247 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>日付</th>\n",
-       "      <th>成果報酬</th>\n",
        "      <th>クリック数</th>\n",
-       "      <th>売上件数</th>\n",
-       "      <th>売上金額</th>\n",
+       "      <th>発送済み商品数</th>\n",
+       "      <th>売上商品の売上額</th>\n",
+       "      <th>紹介料金額に紹介料率をかけた紹介料額</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2022-03-01</td>\n",
-       "      <td>3899</td>\n",
-       "      <td>286</td>\n",
-       "      <td>25</td>\n",
-       "      <td>135560</td>\n",
+       "      <td>2022-02-04</td>\n",
+       "      <td>405</td>\n",
+       "      <td>85</td>\n",
+       "      <td>98303</td>\n",
+       "      <td>4578</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2022-03-02</td>\n",
-       "      <td>1086</td>\n",
-       "      <td>283</td>\n",
-       "      <td>12</td>\n",
-       "      <td>36598</td>\n",
+       "      <td>2022-02-05</td>\n",
+       "      <td>414</td>\n",
+       "      <td>74</td>\n",
+       "      <td>131520</td>\n",
+       "      <td>6008</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2022-03-03</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2022-02-06</td>\n",
+       "      <td>539</td>\n",
+       "      <td>59</td>\n",
+       "      <td>101003</td>\n",
+       "      <td>4880</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2022-03-04</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2022-02-07</td>\n",
+       "      <td>479</td>\n",
+       "      <td>71</td>\n",
+       "      <td>175854</td>\n",
+       "      <td>6398</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2022-03-05</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2022-02-08</td>\n",
+       "      <td>337</td>\n",
+       "      <td>61</td>\n",
+       "      <td>151390</td>\n",
+       "      <td>6421</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>2022-03-06</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2022-02-09</td>\n",
+       "      <td>498</td>\n",
+       "      <td>39</td>\n",
+       "      <td>60938</td>\n",
+       "      <td>2634</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>2022-03-07</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2022-02-10</td>\n",
+       "      <td>389</td>\n",
+       "      <td>55</td>\n",
+       "      <td>115117</td>\n",
+       "      <td>5236</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>2022-03-08</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2022-02-11</td>\n",
+       "      <td>389</td>\n",
+       "      <td>51</td>\n",
+       "      <td>98369</td>\n",
+       "      <td>4287</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>2022-03-09</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2022-02-12</td>\n",
+       "      <td>453</td>\n",
+       "      <td>43</td>\n",
+       "      <td>104080</td>\n",
+       "      <td>4710</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>2022-03-10</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2022-02-13</td>\n",
+       "      <td>429</td>\n",
+       "      <td>51</td>\n",
+       "      <td>79090</td>\n",
+       "      <td>3494</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>2022-03-11</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2022-02-14</td>\n",
+       "      <td>421</td>\n",
+       "      <td>72</td>\n",
+       "      <td>103949</td>\n",
+       "      <td>4723</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>2022-03-12</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2022-02-15</td>\n",
+       "      <td>406</td>\n",
+       "      <td>74</td>\n",
+       "      <td>153421</td>\n",
+       "      <td>6023</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>2022-03-13</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2022-02-16</td>\n",
+       "      <td>462</td>\n",
+       "      <td>40</td>\n",
+       "      <td>68708</td>\n",
+       "      <td>3235</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>2022-03-14</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2022-02-17</td>\n",
+       "      <td>479</td>\n",
+       "      <td>66</td>\n",
+       "      <td>145775</td>\n",
+       "      <td>5707</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>2022-03-15</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2022-02-18</td>\n",
+       "      <td>393</td>\n",
+       "      <td>50</td>\n",
+       "      <td>92833</td>\n",
+       "      <td>4141</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
-       "      <td>2022-03-16</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2022-02-19</td>\n",
+       "      <td>456</td>\n",
+       "      <td>54</td>\n",
+       "      <td>82104</td>\n",
+       "      <td>3882</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
-       "      <td>2022-03-17</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2022-02-20</td>\n",
+       "      <td>534</td>\n",
+       "      <td>45</td>\n",
+       "      <td>80167</td>\n",
+       "      <td>3604</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
-       "      <td>2022-03-18</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2022-02-21</td>\n",
+       "      <td>419</td>\n",
+       "      <td>75</td>\n",
+       "      <td>120705</td>\n",
+       "      <td>6055</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
-       "      <td>2022-03-19</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2022-02-22</td>\n",
+       "      <td>376</td>\n",
+       "      <td>65</td>\n",
+       "      <td>148842</td>\n",
+       "      <td>7289</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
-       "      <td>2022-03-20</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2022-02-23</td>\n",
+       "      <td>463</td>\n",
+       "      <td>52</td>\n",
+       "      <td>90545</td>\n",
+       "      <td>4014</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
-       "      <td>2022-03-21</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2022-02-24</td>\n",
+       "      <td>431</td>\n",
+       "      <td>45</td>\n",
+       "      <td>123171</td>\n",
+       "      <td>5093</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
-       "      <td>2022-03-22</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2022-02-25</td>\n",
+       "      <td>410</td>\n",
+       "      <td>24</td>\n",
+       "      <td>49777</td>\n",
+       "      <td>2413</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
-       "      <td>2022-03-23</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2022-02-26</td>\n",
+       "      <td>414</td>\n",
+       "      <td>37</td>\n",
+       "      <td>106505</td>\n",
+       "      <td>4359</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
-       "      <td>2022-03-24</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2022-02-27</td>\n",
+       "      <td>479</td>\n",
+       "      <td>47</td>\n",
+       "      <td>96290</td>\n",
+       "      <td>4326</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24</th>\n",
-       "      <td>2022-03-25</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>2022-03-26</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>2022-03-27</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>2022-03-28</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>2022-03-29</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>2022-03-30</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>2022-03-31</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2022-02-28</td>\n",
+       "      <td>452</td>\n",
+       "      <td>71</td>\n",
+       "      <td>136728</td>\n",
+       "      <td>5753</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           日付  成果報酬  クリック数  売上件数    売上金額\n",
-       "0  2022-03-01  3899    286    25  135560\n",
-       "1  2022-03-02  1086    283    12   36598\n",
-       "2  2022-03-03     0      0     0       0\n",
-       "3  2022-03-04     0      0     0       0\n",
-       "4  2022-03-05     0      0     0       0\n",
-       "5  2022-03-06     0      0     0       0\n",
-       "6  2022-03-07     0      0     0       0\n",
-       "7  2022-03-08     0      0     0       0\n",
-       "8  2022-03-09     0      0     0       0\n",
-       "9  2022-03-10     0      0     0       0\n",
-       "10 2022-03-11     0      0     0       0\n",
-       "11 2022-03-12     0      0     0       0\n",
-       "12 2022-03-13     0      0     0       0\n",
-       "13 2022-03-14     0      0     0       0\n",
-       "14 2022-03-15     0      0     0       0\n",
-       "15 2022-03-16     0      0     0       0\n",
-       "16 2022-03-17     0      0     0       0\n",
-       "17 2022-03-18     0      0     0       0\n",
-       "18 2022-03-19     0      0     0       0\n",
-       "19 2022-03-20     0      0     0       0\n",
-       "20 2022-03-21     0      0     0       0\n",
-       "21 2022-03-22     0      0     0       0\n",
-       "22 2022-03-23     0      0     0       0\n",
-       "23 2022-03-24     0      0     0       0\n",
-       "24 2022-03-25     0      0     0       0\n",
-       "25 2022-03-26     0      0     0       0\n",
-       "26 2022-03-27     0      0     0       0\n",
-       "27 2022-03-28     0      0     0       0\n",
-       "28 2022-03-29     0      0     0       0\n",
-       "29 2022-03-30     0      0     0       0\n",
-       "30 2022-03-31     0      0     0       0"
+       "           日付  クリック数  発送済み商品数  売上商品の売上額  紹介料金額に紹介料率をかけた紹介料額\n",
+       "0  2022-02-04    405       85     98303                4578\n",
+       "1  2022-02-05    414       74    131520                6008\n",
+       "2  2022-02-06    539       59    101003                4880\n",
+       "3  2022-02-07    479       71    175854                6398\n",
+       "4  2022-02-08    337       61    151390                6421\n",
+       "5  2022-02-09    498       39     60938                2634\n",
+       "6  2022-02-10    389       55    115117                5236\n",
+       "7  2022-02-11    389       51     98369                4287\n",
+       "8  2022-02-12    453       43    104080                4710\n",
+       "9  2022-02-13    429       51     79090                3494\n",
+       "10 2022-02-14    421       72    103949                4723\n",
+       "11 2022-02-15    406       74    153421                6023\n",
+       "12 2022-02-16    462       40     68708                3235\n",
+       "13 2022-02-17    479       66    145775                5707\n",
+       "14 2022-02-18    393       50     92833                4141\n",
+       "15 2022-02-19    456       54     82104                3882\n",
+       "16 2022-02-20    534       45     80167                3604\n",
+       "17 2022-02-21    419       75    120705                6055\n",
+       "18 2022-02-22    376       65    148842                7289\n",
+       "19 2022-02-23    463       52     90545                4014\n",
+       "20 2022-02-24    431       45    123171                5093\n",
+       "21 2022-02-25    410       24     49777                2413\n",
+       "22 2022-02-26    414       37    106505                4359\n",
+       "23 2022-02-27    479       47     96290                4326\n",
+       "24 2022-02-28    452       71    136728                5753"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
