--- a/get_sales.ipynb
+++ b/get_sales.ipynb
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -778,12 +778,23 @@
     "\n",
     "    def get_report(self):\n",
     "\n",
-    "        driver = webdriver.Chrome()\n",
+    "        options = webdriver.ChromeOptions()\n",
+    "        #参考　https://netwiz.jp/python3-web-browser/#Web-2\n",
+    "        # User-Agent\n",
+    "        user_agent = \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.106 Safari/537.36\"\n",
+    "\n",
+    "        # オプション設定\n",
+    "        options = webdriver.ChromeOptions()\n",
+    "        options.add_argument(\"--headless\")\n",
+    "        options.add_argument('--user-agent=' + user_agent)\n",
+    "        options.add_argument('--lang=ja-JP')\n",
+    "        \n",
+    "        driver = webdriver.Chrome(options=options)\n",
     "        driver.implicitly_wait(15)\n",
     "        driver.set_page_load_timeout(15)\n",
     "\n",
     "\n",
-    "        driver.set_window_size('1200', '10000')\n",
+    "        driver.set_window_size('1200', '1000')\n",
     "        driver.get('https://www.amazon.co.jp/ap/signin?ie=UTF8&openid.pape.max_auth_age=0&openid.return_to=https%3A%2F%2Faffiliate.amazon.co.jp%2F&openid.identity=http%3A%2F%2Fspecs.openid.net%2Fauth%2F2.0%2Fidentifier_select&openid.assoc_handle=amzn_associates_jp&openid.mode=checkid_setup&marketPlaceId=A1VC38T7YXB528&language=ja_JP&ignoreAuthState=1&openid.claimed_id=http%3A%2F%2Fspecs.openid.net%2Fauth%2F2.0%2Fidentifier_select&ie=UTF8&openid.ns=http%3A%2F%2Fspecs.openid.net%2Fauth%2F2.0&fromAuthPrompt=1')\n",
     "\n",
     "        id_elem = WebDriverWait(driver, 20).until(\n",
@@ -808,9 +819,12 @@
     "        driver.get(report_url)\n",
     "\n",
     "        sales_selector = '//*[@id=\"reports-commission-earnings-header\"]'\n",
+    "        \n",
+    "        driver.save_screenshot(\"search-selenium.png\")\n",
     "        sales_elem = WebDriverWait(driver, 20).until(\n",
     "            EC.presence_of_element_located((By.XPATH, sales_selector))\n",
     "        )\n",
+    "        print(sales_elem.is_displayed())\n",
     "        try:\n",
     "            sales_elem.click()\n",
     "        except:\n",
@@ -1343,30 +1357,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/52/30wt5wmx0nbcqwkbskglbmxm0000gn/T/ipykernel_54873/990758901.py:12: DeprecationWarning: find_element_by_xpath is deprecated. Please use find_element(by=By.XPATH, value=xpath) instead\n",
-      "  iframe = driver.find_element_by_xpath('//*[@id=\"frame1\"]')\n",
-      "/var/folders/52/30wt5wmx0nbcqwkbskglbmxm0000gn/T/ipykernel_54873/990758901.py:25: DeprecationWarning: find_element_by_xpath is deprecated. Please use find_element(by=By.XPATH, value=xpath) instead\n",
-      "  login_button = driver.find_element_by_xpath('//*[@id=\"login_aff\"]/input[1]')\n",
-      "/var/folders/52/30wt5wmx0nbcqwkbskglbmxm0000gn/T/ipykernel_54873/1167512287.py:88: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  df_merge=df_gsh.append(df)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# ws, df_gs = gs.get_data_gsh('data_amazon')\n",
-    "# df_rakuten = get_daliy_sales('アマゾン')\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
    "outputs": [],
@@ -1556,6 +1546,32 @@
     "    gs.return_data(this_date, table_df)\n",
     "    \n",
     "    return table_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/52/30wt5wmx0nbcqwkbskglbmxm0000gn/T/ipykernel_61053/2106427386.py:34: DeprecationWarning: find_element_by_xpath is deprecated. Please use find_element(by=By.XPATH, value=xpath) instead\n",
+      "  login_button = driver.find_element_by_xpath('//*[@id=\"signInSubmit\"]')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ws, df_gs = gs.get_data_gsh('data_amazon')\n",
+    "df_rakuten = get_daliy_sales('アマゾン')\n"
    ]
   },
   {
